--- a/docs/style.css
+++ b/docs/style.css
@@ -182,6 +182,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     color: #333;
+    background-image: url('bg1.jpg'); /* 默认背景图 */
+    background-size: cover;
+    background-position: center;
 }
 
 #main {
@@ -196,11 +199,13 @@ body {
 #title h1 {
     font-size: 36px;
     font-weight: bold;
+    text-align: center;
 }
 
-#title p {
+.exam-time {
     font-size: 18px;
     color: #666;
+    text-align: center;
 }
 
 #countdown {
@@ -213,7 +218,7 @@ body {
     margin: 0 10px;
     text-align: center;
     font-size: 48px;
-    background-color: #33738D;
+    background-color: rgba(0, 0, 0, 0.5); /* 半透明黑色背景 */
     padding: 20px;
     border-radius: 10px;
     color: white;
