--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,19 @@
 /* 全局样式 */
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    background-image: url('bg1.jpg'); /* 默认背景图 */
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
 }
 
 /* 标题栏 */
@@ -146,51 +156,7 @@ header .current-date {
     height: auto;
 }
 
-/* 底部备案信息 */
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #f1f1f1;
-    font-size: 14px;
-}
-
-footer a {
-    color: #33738D;
-    text-decoration: none;
-}
-
-/* 适配不同屏幕 */
-@media (max-width: 768px) {
-    .countdown-entries .entry {
-        width: 48%;
-    }
-}
-
-@media (max-width: 480px) {
-    .countdown-entries .entry {
-        width: 100%;
-    }
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* 全局样式 */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #f4f4f4;
-    color: #333;
-    background-image: url('bg1.jpg'); /* 默认背景图 */
-    background-size: cover;
-    background-position: center;
-}
-
+/* 倒计时页面样式 */
 #main {
     width: 100%;
     height: 100vh;
@@ -284,6 +250,7 @@ body {
     cursor: pointer;
 }
 
+/* 底部备案信息 */
 footer {
     position: fixed;
     bottom: 10px;
@@ -292,7 +259,6 @@ footer {
     color: #666;
 }
 
-/* 底部备案信息 */
 footer a {
     color: #33738D;
     text-decoration: none;
