--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -127,8 +127,8 @@ body {
     padding: 20px;
     font-size: 12px;
     color: #777;
-    position: static;
-    bottom: -200px; /* 固定在页面底部 */
+    position: absolute;
+    bottom: 0px; /* 固定在页面底部 */
     left: 0;
     width: 100%;
     z-index: 50; /* 确保备案信息在广告弹窗下方 */
