--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -143,6 +143,12 @@ body {
     text-decoration: underline;
 }
 
+.beian img {
+    height: 20px;
+    width: auto; 
+    vertical-align: middle;
+}
+
 .contact {
     margin-top: 10px;
 }
